<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Udacity Alumni</string>
    <string name="home">Home</string>
    <string name="careers">Careers</string>
    <string name="mentorship">Mentorship</string>
    <string name="meetups">Meetups</string>
    <string name="spotlight">Spotlight</string>
    <string name="feed">Feed</string>
    <string name="my_classroom">My Classroom</string>
    <string name="sign_out">Sign Out</string>
    <string name="article_image">Article Image</string>
    <string name="share_article">Share article</string>
    <string name="post_photo">Photo of Post</string>
    <string name="post">Post</string>
    <string name="add_photo_video">Add Photo or Video</string>
    <string name="loading_fake_data">Loading Fake Data</string>
    <string name="debug_mode">Debug Mode</string>
    <string name="add_fake_data">Add Fake Data</string>

    <!--keys-->
    <string name="article_id_key" translatable="false">articleIdKey</string>
    <string name="article_next_id_key" translatable="false">articleNextIdKey</string>
    <string name="article_list_key" translatable="false">articleListIdKey</string>
    <string name="article_is_first_key" translatable="false">isFirstArticle</string>
    <string name="article_is_last_key" translatable="false">isLastArticle</string>
    <string name="article_is_next_key" translatable="false">isNextArticle</string>
    <string name="article_bookmarks_key" translatable="false">isBookmarked</string>
    <string name="viewpager_position_key" translatable="false">viewpagerKey</string>
    <string name="tag_key" translatable="false">tagKey</string>
    <string name="title_key" translatable="false">titleKey</string>
    <string name="preference_file_key" translatable="false">preferencesKey</string>
    <string name="fake_data_key" translatable="false">fakeDataKey</string>
    <string name="seconds_ago"><xliff:g id="seconds">%d</xliff:g> secs ago</string>
    <string name="minutes_ago"><xliff:g id="minutes">%d</xliff:g> mins ago</string>
    <string name="hours_ago"><xliff:g id="hours">%d</xliff:g> hours ago</string>
    <string name="days_ago"><xliff:g id="days">%d</xliff:g> days ago</string>
    <string name="weeks_ago"><xliff:g id="days">%d</xliff:g> weeks ago</string>
    <string name="months_ago"><xliff:g id="months">%d</xliff:g> months ago</string>
    <string name="years_ago"><xliff:g id="years">%d</xliff:g> years ago</string>
    <string name="more">More</string>
    <string name="bio">Bio</string>
    <string name="down_arrow">Down arrow</string>
    <string name="up_arrow">Up arrow</string>
    <string name="less">Less</string>
    <string name="swipe_across_articles">Swipe Across Articles</string>
    <string name="back_arrow">Back arrow</string>
    <string name="forward_arrow">Forward arrow</string>
    <string name="next_article">Next Article</string>
    <string name="previous_article">Previous Article</string>
    <string name="bookmark">Bookmark</string>
    <string name="next_article_image">Image of next article</string>
    <string name="udacity">Udacity</string>
    <string name="catalog">Catalog</string>
    <string name="alums">Alums</string>
    <string name="under_construction">Under Construction</string>
    <string name="help_build_app">Help us build this app and gain experience working on group projects!</string>
    <string name="learn_more">Learn More</string>
    <string name="articles">Articles</string>
    <string name="success_stories">Success Stories</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="loading">Loading…</string>
    <string name="community">Community</string>
    <string name="search">Search</string>
    <string name="new_post">New post</string>
    <string name="image">Image</string>
    <string name="post_is_empty">Post is empty</string>
    <string name="user_null">User is unexpectedly null</string>
    <string name="choose_photo">Choose a photo</string>
    <string name="upload_failed">Upload failed</string>
    <string name="app_name_hint">App Name (Facebook, Twitter…)</string>
    <string name="app_title">App Name</string>
    <string name="add_image">Add Image</string>

    <!-- Notifications -->
    <string name="notification_title">New Spotlighted Content</string>
    <string name="title_activity_login">Sign in</string>
    <string name="udacity_alumni_logo">Udacity Alumni logo</string>
    <string name="android">Android</string>
    <string name="web">Web</string>
    <string name="web_icon">Web Icon</string>
    <string name="trending">Trending</string>
    <string name="featured">Featured</string>
    <string name="apps">Apps</string>


    <!-- Error Messages -->
    <string name="error_connection">Connection Error</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="log_in_with_github">Log in with Github</string>
    <string name="password">Password</string>
    <string name="username_or_email">Username or Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_failed">Failed to log in</string>
    <string name="login_error_connecting_google_play_services">There was an error connecting to Google Play Services</string>

    <!--On Share String-->
    <string name="share">"\nLet me recommend this article:\n\n"<xliff:g id="url">%s</xliff:g></string>
    <string name="choose_to">choose one</string>

    <!-- Sliding View -->
    <string name="sliding_view_see_more">See More…</string>
    <string name="sliding_view_dismiss_content_desc">Dismiss</string>

    <string name="title_activity_new_post">NewPostActivity</string>
    <string name="title_activity_main_v2">MainActivityV2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Posts -->
    <string name="posts_send">Send</string>

    <!-- a11y -->
    <string name="a11y_github">Github link</string>
    <string name="a11y_like_button">Like button</string>
    <string name="a11y_posted_image">Picture posted</string>
    <string name="a11y_user_photo">Picture of user</string>
    <string name="a11y_comment_button">Add comment</string>
    <string name="a11y_flag_icon">Report this post</string>
    <string name="a11y_more_options">More options</string>
    <string name="a11y_posts_send_button">Send this post</string>
    <string name="a11y_posts_add_image_button">Add an image to this post</string>
    <string name="a11y_posts_take_photo_button">Take a photo and add it to this post</string>
    <string name="a11y_app_image">App Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
