<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/detail_article_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/cardview_margin"
            android:layout_marginStart="@dimen/cardview_margin"
            android:layout_marginTop="@dimen/cardview_margin"
            android:textStyle="bold"
            android:textSize="@dimen/detail_title_text_size"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="AIND Grad Gets Job at IBM" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detail_article_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_article_image_height"
                android:adjustViewBounds="true"
                android:contentDescription="@string/article_image"
                android:scaleType="centerCrop"
                tools:src="@drawable/sample_image_vr" />

            <TextView
                android:id="@+id/detail_article_spotlight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:text="@string/spotlight"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:layout_alignParentBottom="true"
                android:alpha=".7"
                android:textStyle="bold" />



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/detail_article_prof_pic"
                android:layout_width="@dimen/profile_image_diameter"
                android:layout_height="@dimen/profile_image_diameter"
                android:layout_marginBottom="@dimen/cardview_margin"
                android:layout_marginStart="@dimen/cardview_margin"
                android:layout_marginTop="@dimen/cardview_margin"
                android:src="@drawable/ben_lewis_prof_pic" />

            <TextView
                android:id="@+id/detail_article_author_time_ago"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/cardview_margin"
                android:layout_weight="2"
                android:gravity="center_vertical"
                tools:text="Ben Lewis\n3 hrs ago" />




            <ImageView
                android:id="@+id/detail_article_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/share_article"
                android:padding="@dimen/view_padding"
                android:src="@drawable/ic_follow"
                android:tint="@color/unselected_icon_dark"
                android:layout_marginEnd="@dimen/view_padding"/>


        </LinearLayout>

        <View style="@style/Divider" />


        <TextView
            android:id="@+id/detail_article_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cardview_margin"
            android:textSize="18sp"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="Health maintenance organization permanent insurance renewal risk grievance EAPs benefit. General agent ambulatory care preventive care renewal policyholder hospice care hospital-surgical coverage health care provider. Claim incurral date exclusions and limitations medicare health care provider FSA. Group health plan workers compensation medicaid free-look period short-term medical insurance FSA. Hsa fee schedule insured short-term medical insurance benefit cap." />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/view_padding">

            <ImageView
                android:id="@+id/detail_article_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back_arrow"
                android:src="@drawable/ic_arrow_back"
                android:tint="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/swipe_across_articles" />

            <ImageView
                android:id="@+id/detail_article_forward_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/forward_arrow"
                android:rotation="180"
                android:src="@drawable/ic_arrow_back"
                android:tint="@android:color/darker_gray" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_text" />

        <TextView
            android:layout_marginTop="@dimen/view_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:text="@string/next_article"
            android:layout_marginStart="@dimen/view_padding"
            android:layout_marginBottom="@dimen/view_padding"/>

        <include layout="@layout/include_next_article" />

    </LinearLayout>

</ScrollView>