<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.developer.udacityalumni.post.NewPostFragment">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:baselineAligned="false">


        <FrameLayout
            android:id="@+id/buttonAddPhoto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/ic_image_black_24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/a11y_posts_add_image_button" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/buttonTakePhoto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/ic_add_photo"
                android:layout_gravity="center"
                android:contentDescription="@string/a11y_posts_take_photo_button" />


        </FrameLayout>

        <FrameLayout
            android:id="@+id/button_send"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/ic_send_black_24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/a11y_posts_send_button" />


        </FrameLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
