<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.google.developer.udacityalumni.activity.NewAppActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/new_app_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/new_app_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:contentInsetEnd="16dp">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <EditText
        android:id="@+id/new_app_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_name_hint"/>

    <TextView
        android:id="@+id/new_app_image_tv"
        android:layout_width="@dimen/item_large_image_height"
        android:layout_height="@dimen/item_large_image_height"
        android:layout_gravity="center"
        android:background="@drawable/ic_image"
        android:textSize="24sp"
        android:text="@string/add_image"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:contentDescription="@string/add_image"/>

    <ImageView
        android:id="@+id/new_app_image_iv"
        android:layout_width="@dimen/item_large_image_height"
        android:layout_height="@dimen/item_large_image_height"
        android:visibility="gone"
        android:layout_gravity="center"
        android:contentDescription="@string/image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/activity_horizontal_margin">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_android"
                android:layout_gravity="end"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/activity_horizontal_margin">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_web"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:layout_gravity="start"/>

        </FrameLayout>


    </LinearLayout>



</LinearLayout>
