<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="app"
            type="com.google.developer.udacityalumni.app.App" />
    </data>

    <android.support.v7.widget.CardView style="@style/CardView.Light.UA">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profPic"
                android:layout_width="@dimen/profile_image_diameter"
                android:layout_height="@dimen/profile_image_diameter"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/profile_pic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:userPhotoUrl="@{app.userPhotoUrl}"
                tools:src="@drawable/ben_lewis_prof_pic" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{app.userName}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toTopOf="@+id/date"
                app:layout_constraintStart_toEndOf="@+id/profPic"
                app:layout_constraintTop_toTopOf="@+id/profPic"
                tools:text="Ben Lewis" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/profPic"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:text="6 hrs" />

            <ImageView
                android:id="@+id/appImage"
                android:layout_width="@dimen/cardview_image_height"
                android:layout_height="@dimen/cardview_image_height"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/a11y_app_image"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profPic"
                app:photoUrl="@{app.photoUrl}"
                app:srcCompat="@drawable/udacity_logo" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:text="@{app.name}"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintBottom_toBottomOf="@+id/appImage"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/appImage"
                app:layout_constraintTop_toTopOf="@+id/appImage"
                tools:text="Udacity Alumni" />

            <ImageView
                android:id="@+id/github"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/a11y_github"
                app:layout_constraintBottom_toBottomOf="@+id/appImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:srcCompat="@drawable/ic_github_logo" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="336dp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/appImage"
                tools:src="@drawable/ic_android" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</layout>